<resources>
    <string name="app_name">KnowledgeForge</string>
    <string name="logo">logo</string>
    <string name="login_page">Log In</string>
    <string name="please_enter_your_account">KnowledgeForge</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="btn_l">btn_l</string>

    <string name="start">Find a Tutor</string>
    <string name="account">Account Information</string>
    <string name="feedback">feedback</string>
    <string name="logout">logout</string>
    <string name="customization">customization</string>
    <string name="available_tutors">Available Tutors</string>
    <string name="joshua">Joshua</string>
    <string name="book">Book</string>
    <string name="button">Button</string>
    <string name="book2">Book</string>
    <string name="misha">Misha</string>
    <string name="chamoy">Chamoy</string>
    <string name="most_aw3zome_2tor">Most_Aw3Zome_2tor</string>
    <string name="aizen">Aizen</string>
    <string name="bald_crusader">Bald Crusader</string>
    <string name="user_rating_8_10">User Rating: 8/10</string>
    <string name="contact_number_1231234">Contact Number: 1231234</string>
    <string name="book_now">Book Now</string>
    <string name="are_you_sure_you_want_to_book">Are you sure you want to book:</string>
    <string name="address_heaven">Address: Heaven</string>
    <string name="joshua1">Joshua</string>
    <string name="full_name_joshua_jongels">Full Name: Joshua Jongels</string>
    <string name="contact_number_999999">Contact Number: 999999</string>
    <string name="address_calajoan">Address: Calajoan</string>
    <string name="full_name_misha_moshka">Full Name: Misha Moshka</string>
    <string name="user_rating_7_5_10">User Rating: 7.5/10</string>
    <string name="user_rating_9_10">User Rating: 9/10</string>
    <string name="contact_number_1738">Contact Number: 1738</string>
    <string name="address_terabithia">Address: Terabithia</string>
    <string name="full_name_chamoy_pickle">Full Name: Chamoy Pickle</string>
    <string name="user_rating_9_5_10">User Rating: 9.5/10</string>
    <string name="contact_number_244466666">Contact Number: 244466666</string>
    <string name="address_namek">Address: Namek</string>
    <string name="full_name_john_pork">Full Name: John Pork</string>
    <string name="full_name_sosuke_aizen">Full Name: Sosuke Aizen</string>
    <string name="address_muken">Address: Muken</string>
    <string name="contact_number_555555">Contact Number: 555555</string>
    <string name="full_name_shiny_mcbaldhead">Full Name: Shiny McBaldhead</string>
    <string name="address_baldville">Address: Baldville</string>
    <string name="contact_number_1486923">Contact Number: 1486923</string>
    <string name="user_rating_7_10">User Rating: 7/10</string>
    <string name="back_to_home">Back to Home</string>
    <string name="you_have_successfully_booked_this_tutor">You have Successfully Booked this Tutor!</string>
    <string name="knowledgeforge1">KnowledgeForge</string>
    <string name="welcome_to_knowledgeforge2">Welcome to KnowledgeForge</string>
    <string name="account1">Account</string>
    <string name="androidproject">AndroidProject</string>
    <string name="feedback1">How was your experience using our app?</string>
    <string name="feedback2">Tell us what can be improved?</string>
    <string name="feedback3">Feedback</string>
    <string name="feedback4">Enter your feedback here!</string>
    <string name="Back">Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="register">Register</string>
    <string name="log_in_using_existing_account">Log In using Existing Account</string>
    <string name="logging_in">Logging in...</string>
    <string name="Username">Username</string>
    <string name="required">Required</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="email">Email</string>
    <string name="Required">Required</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="creating_account">Creating Account...</string>
    <item name="btnAccept" type="id">Choose</item>
</resources>