<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mindmelders.Signup">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="79dp"
        android:layout_height="79dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="52dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="112dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_weight="1"
            android:text="@string/Username"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


        <EditText
            android:id="@+id/uName"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/required"
            android:inputType="text"
            android:text=""
            android:textColor="#5C6667"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBack2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="390dp"
        android:backgroundTint="#E3CCCC"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#E3CCCC"
        android:elevation="4dp"
        android:stateListAnimator="@animator/button_animator"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="410dp"
        android:layout_height="57dp"
        android:layout_marginTop="164dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_weight="1"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Required"
            android:inputType="text"
            android:text=""
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/Password"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


        <EditText
            android:id="@+id/passWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="54dp"
        android:layout_marginTop="272dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textVieww"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/confirm_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


        <EditText
            android:id="@+id/cPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="349dp"
        android:layout_height="46dp"
        android:layout_marginTop="35dp"

        android:fontFamily="monospace"
        android:text="@string/app_name"

        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="57dp"
        android:layout_height="61dp"
        android:layout_marginBottom="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/loadingText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:text="@string/creating_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="4dp"
        android:stateListAnimator="@animator/button_animator"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>