<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.mindmelders.Account">

    <Button
        android:id="@+id/custom2"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:background="#23811C"
        android:text="@string/feedback"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/logout"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:background="#23811C"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="201dp"
        android:layout_height="87dp"
        android:gravity="center"
        android:text="@string/account1"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>