<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.mindmelders.FindTutor"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:gravity="center_horizontal|fill"
        android:text="@string/available_tutors"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="412dp"
                android:layout_height="270dp"
                android:layout_gravity="center"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/_086679" />

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="87dp"
                android:layout_gravity="center_horizontal"
                android:background="#FEFEFE">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:text="@string/joshua"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/book" />

            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/btn_lg"
                android:layout_width="412dp"
                android:layout_height="270dp"
                android:layout_gravity="center"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/_231019"
                tools:ignore="DuplicateIds" />

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="87dp"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/book2" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:text="@string/misha"
                    android:textAlignment="center"
                    android:textSize="24sp" />
            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/btn_lg"
                android:layout_width="412dp"
                android:layout_height="270dp"
                android:layout_gravity="center"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/aaa" />

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="87dp"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/book2" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:text="@string/chamoy"
                    android:textAlignment="center"
                    android:textSize="24sp" />
            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/btn_lg"
                android:layout_width="412dp"
                android:layout_height="270dp"
                android:layout_gravity="center"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/as" />

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="87dp"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/book2" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:text="@string/most_aw3zome_2tor"
                    android:textAlignment="center"
                    android:textSize="24sp" />
            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/btn_lg"
                android:layout_width="412dp"
                android:layout_height="270dp"
                android:layout_gravity="center"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ai" />

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="87dp"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/book2" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:text="@string/aizen"
                    android:textAlignment="center"
                    android:textSize="24sp" />
            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/btn_lg"
                android:layout_width="412dp"
                android:layout_height="270dp"
                android:layout_gravity="center"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/aad" />

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="87dp"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/book2" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:text="@string/bald_crusader"
                    android:textAlignment="center"
                    android:textSize="24sp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>